# ZentixAI

./: .gitignore  AGI.py  LICENSE  README.md  SECURITY.md  api_server.py  cli.py  dashboard.html  dashboard.py  dashboard_server.py  layout.tsx  logger.py  page.tsx  plugin_example.py  pyproject.toml  requirements.txt  zero_system.py
.github/workflows/: codeql.yml
amrikyyai/: __init__.py  cli.py  dashboard.py  dashboard_server.py  zero_system.py
plugins/: __init__.py  echo.py  loader.py
skills/: __init__.py  base.py  empathy_sensor.py  mindful_embodiment.py  parallel_scenarios_memory.py  sibling_ai_genesis.py  true_digital_friendship.py
sss/: __init__.py  plugin_example.py  zero_system.py
static/: styles.css
templates/: chat.html  index.html  login.html
tests/: __init__.py  conftest.py  test_calculator.py  test_calculator_plugin.py  test_dynamic_skill.py  test_empathy_detection.py  test_interaction_logging.py  test_mindful_embodiment.py  test_mood.py  test_mood_history.py  test_plugin.py  test_plugin_loader.py  test_qlearner.py  test_qlearning.py  test_request.py  test_zero_system.py
zero_system/: __init__.py
zero_system/learning/: qlearn.py
zero_system/plugins/: __init__.py  calculator_plugin.py  registry.py
zero_system/skills/: base.py  empathy_sensor.py  mindful_embodiment.py  parallel_memory.py  sibling_genesis.py  true_friendship.py
